update notice title

--- a/_posts/notice/2021-03-12-notice-2.md
+++ b/_posts/notice/2021-03-12-notice-2.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: 通知公告
-subtitle: '网络攻防课程开课通知'
+subtitle: '【课程通知】网络攻防课程开课通知'
 date: 2021.3.11
 permalink: /:categories/:year/:month/:day/:title
 categories:
