--- a/_posts/notice/2021-03-16-paper-1.md
+++ b/_posts/notice/2021-03-16-paper-1.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: 通知公告
-subtitle: '网络与系统安全重要国际会议NSS 2021投稿通知'
+subtitle: '【投稿通知】网络与系统安全重要国际会议NSS 2021投稿通知'
 date: 2021.2.24
 permalink: /:categories/:year/:month/:day/:title
 categories:
