--- a/_posts/notice/2021-03-16-paper-4.md
+++ b/_posts/notice/2021-03-16-paper-4.md
@@ -2,7 +2,7 @@
 
 layout: post
 title: 通知公告
-subtitle: '近期会议截稿提醒'
+subtitle: '【投稿通知】近期会议截稿提醒'
 date: 2021.4.8
 permalink: /:categories/:year/:month/:day/:title
 categories:
