update notice title

--- a/_posts/notice/2021-03-16-paper-2.md
+++ b/_posts/notice/2021-03-16-paper-2.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: 通知公告
-subtitle: 'CCF C类计算机网络重要国际会议WASA 2021投稿通知'
+subtitle: '【投稿通知】CCF C类计算机网络重要国际会议WASA 2021'
 date: 2021.2.23
 permalink: /:categories/:year/:month/:day/:title
 categories:
