--- a/_posts/notice/2021-03-16-paper-3.md
+++ b/_posts/notice/2021-03-16-paper-3.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: 通知公告
-subtitle: '近期会议截稿提醒'
+subtitle: '【投稿通知】近期会议截稿提醒'
 date: 2021.3.20
 permalink: /:categories/:year/:month/:day/:title
 categories:
