update notice title

--- a/_posts/notice/2021-03-12-notice-3.md
+++ b/_posts/notice/2021-03-12-notice-3.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: 通知公告
-subtitle: '【小组团建】——春日踏青系列'
+subtitle: '【小组团建】春日踏青系列'
 date: 2021.3.11
 permalink: /:categories/:year/:month/:day/:title
 categories:
