--- a/_posts/notice/2021-03-12-notice-4.md
+++ b/_posts/notice/2021-03-12-notice-4.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: 通知公告
-subtitle: '【学子风采】——悬镜安全完成近亿元A轮战略融资'
+subtitle: '【学子风采】悬镜安全完成近亿元A轮战略融资'
 date: 2021.3.11
 permalink: /:categories/:year/:month/:day/:title
 categories:
