--- a/_posts/seminar/2021-07-11-seminar-16.md
+++ b/_posts/seminar/2021-07-11-seminar-16.md
@@ -3,7 +3,7 @@ layout: post
 title: "学术报告"
 subtitle: 'Indirect Calls'
 date: 2021.7.2
-host: "陈夏润"
+host: "杨洲"
 digest: "介绍非直接调用，并分析其研究意义，研究现状。"
 permalink: /:categories/:year/:month/:day/:title
 categories:
