--- a/_posts/notice/2021-09-08-notice-10.md
+++ b/_posts/notice/2021-09-08-notice-10.md
@@ -9,7 +9,7 @@ categories:
 
 ---
 
-热烈祝贺实验室吴勃志同学被美国计算机学会软件工程和方法论汇刊TOSEM（ACM Transactions on Software Engineering Methodology）录用的关于机器学习可解释性论文《Why an Android app is classified as malware? Towards malware classification interpretation》正式发表!
+热烈祝贺实验室吴勃志同学被美国计算机学会软件工程和方法论汇刊TOSEM（ACM Transactions on Software Engineering Methodology）录用的关于机器学习可解释性论文《Why an Android app is classified as malware: Towards malware classification interpretation》正式发表!
 
 TOSEM是当前软件工程领域两大顶刊之一，是CCF推荐的A类期刊，其中很多论文都是软件工程领域的经典之作，具有极高的学术价值和实用价值。TOSEM每年发表论文很少，录用率极低，影响因子高，近几年国内几乎没有学者在这上面发表论文。
 
