--- a/_posts/notice/2021-11-2-notice-14.md
+++ b/_posts/notice/2021-11-2-notice-14.md
@@ -31,7 +31,9 @@ categories:
 <iframe src="//player.bilibili.com/player.html?aid=293906345&bvid=BV18F411a7m4&cid=435093563&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
 </p>
 
-<video id="video1" width="420" style="margin-top:15px;" controls="controls">
-  <source src="../assets/video/wen.mp4" type="video/mp4" />  <!-- 视频 必须是自己的 视频名称  视频路径-->
+<p aligh="center">
+    <video id="video1" width="420" style="margin-top:15px;" controls="controls">
+            <source src="../../../../../assets/video/20211101.mp4" type="video/mp4" />  <!-- 视频 必须是自己的 视频名称  视频路径-->
         Your browser does not support HTML5 video.
-</video>
+    </video>
+</p> 
