--- a/_posts/notice/2021-11-8-notice-16.md
+++ b/_posts/notice/2021-11-8-notice-16.md
@@ -9,7 +9,7 @@ categories:
 
 ---
 
-近日，喜事频传。我组2020届研究生李经纬师兄在导师文伟平教授的指导下，于我校读研期间申请的三项专利均被授权。这批专利的授权标志着我组对创新的不断追求，彰显着PKU-Exploit 团队深厚的技术实力。
+近日，喜事频传。我组2020届研究生**李经纬**师兄在导师文伟平教授的指导下，于我校读研期间申请的三项专利均被授权。这批专利的授权标志着我组对创新的不断追求，彰显着PKU-Exploit 团队深厚的技术实力。
 
 <div align=center>
 <img src="https://github.com/xxycfhb/pku_exploit_files/blob/main/%E4%B8%93%E5%88%A91.png?raw=true"/>
