--- a/_posts/notice/2021-11-5-notice-15.md
+++ b/_posts/notice/2021-11-5-notice-15.md
@@ -12,7 +12,8 @@ categories:
 <div align=center>
 <img src="https://github.com/xxycfhb/pku_exploit_files/blob/main/%E5%88%98%E5%AE%87%E8%88%AA%E8%8E%B7%E5%A5%96%E8%AF%81%E4%B9%A6.png?raw=true"/>
 </div>
-近日，喜讯传来，我组2020级研究生刘宇航同学所在的“链影NFTmovie”战队，获得了2021万向区块链黑客马拉松比赛中Qtum赛道的唯一奖项。这一奖项的取得彰显了PKU-Exploit 团队深厚的技术实力。
+
+近日，喜讯传来，我组2020级研究生**刘宇航**同学所在的“链影NFTmovie”战队，获得了2021万向区块链黑客马拉松比赛中Qtum赛道的唯一奖项。这一奖项的取得彰显了PKU-Exploit 团队深厚的技术实力。
 
 
 2021万向区块链黑客马拉松以“数字世界2077”为主命题，广邀全球优秀开发者共同探讨区块链与5G、AI、IoT等新型数字技术的融合如何赋能生活、经济、治理等各方面的数字化转型？如何为未来世界创造应用和价值？希望参赛者们能够通过极具创意和应用价值的区块链解决方案加速元宇宙构建，带领大家走进高度数字化与智能化的“数字世界2077”。
