--- a/_posts/notice/2022-1-24-notice-19.md
+++ b/_posts/notice/2022-1-24-notice-19.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: 通知公告
-subtitle: '【小组快讯】陈夏润学长的形象海报即将登陆北京地铁公交！'
+subtitle: '【学子风采】陈夏润学长的形象海报即将登陆北京地铁公交！'
 date: 2022.1.24
 permalink: /:categories/:year/:month/:day/:title
 categories:
