--- a/_posts/notice/2022-2-12-notice-20.md
+++ b/_posts/notice/2022-2-12-notice-20.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: 通知公告
-subtitle: '【小组快讯】第一个找到夏润学长海报的小伙伴诞生啦！'
+subtitle: '【学子风采】第一个找到夏润学长海报的小伙伴诞生啦！'
 date: 2022.2.12
 permalink: /:categories/:year/:month/:day/:title
 categories:
