Update and rename 8.29 to 2022-8-29-notice-27.md

--- a/_posts/notice/2022-8-29-notice-27.md
+++ b/_posts/notice/2022-8-29-notice-27.md
@@ -10,7 +10,7 @@ categories:
 
 加强网络信息安全保护是企业数字化转型的重中之重，网络安全人才培养成为“必修课”。在此背景下，西门子（中国）有限公司发起西门子白帽黑客大赛，赛宁网安为大赛提供技术支持。
 这次大赛共招募集结8支精英战队，由北京大学、清华大学、北京邮电大学、华中科技大学、上海交通大学等国内高校与西门子员工的网络安全人才联合组成，他们来自五湖四海，各个身怀“绝技。
-在本次大赛中，北京大学软件安全研究小组的付烨齐、张芊、王晗同学参加此次比赛，付烨齐同学斩获一等奖，张芊、王晗同学获得三等奖荣誉。
+在本次大赛中，北京大学软件安全研究小组的付烨齐、张芊、王晗同学参加了此次比赛，付烨齐同学斩获一等奖，张芊、王晗同学获得三等奖荣誉。
 
 
 ### 成员感想
