修改照片路径

--- a/_posts/notice/2022-8-29-notice-27.md
+++ b/_posts/notice/2022-8-29-notice-27.md
@@ -24,14 +24,14 @@ categories:
 ## 张芊
 工控安全是生产生活中极为重要的一环,在过往的比赛中我鲜有接触和了解,通过西门子白帽黑客大赛的这次机会,我们也学习到了很多工控知识和工控协议,为我开启了一个新的领域;同时通过前期的准备和学习 ,也成功在比赛中拿到了工控方向的一道一血,无论最终比赛成绩如何,本次经历都为我打开了工控安全的大门展现出了全新的方向。
 <div align=center>
-<img src="https://github.com/desperate08/DevPos/blob/master/%E5%9B%BE%E7%89%87/zq.jpg?raw=true" width="600px" height="400px"/>
+<img src="../_posts/imgs/zq.jpg?raw=true" width="600px" height="400px"/>
 </div>
 <br/>
 
 ## 王晗
 在实验室的一年时间，通过项目学习到了非常多的知识，非常感谢文老师和每个同学，参加ctf比赛可以圈内众高手过招较量，让我更直接的看到自己这段时间的成长，也感受到了和众高手之间的差距所在。学无止境, 今后定将继续努力。
 <div align=center>
-<img src="https://github.com/desperate08/DevPos/blob/master/%E5%9B%BE%E7%89%87/wh.jpg?raw=true" width="600px" height="400px"/>
+<img src="../_posts/imgs/wh.jpg?raw=true" width="600px" height="400px"/>
 </div>
 <br/>
 
