--- a/_posts/seminar/2025-1-9-seminar-60.md
+++ b/_posts/seminar/2025-1-9-seminar-60.md
@@ -2,8 +2,8 @@
 layout: post
 title: "学术报告"
 subtitle: '小程序安全研究分享'
-date: 2024.12.26
-host: "谢沅甫"
+date: 2024.1.9
+host: "方艺智"
 digest: "本次组会分享了两篇论文，主要是关于小程序的研究与安全分析"
 permalink: /:categories/:year/:month/:day/:title
 categories:
