--- a/_posts/seminar/2024-12-26-seminar-59.md
+++ b/_posts/seminar/2024-12-26-seminar-59.md
@@ -3,7 +3,7 @@ layout: post
 title: "学术报告"
 subtitle: '人脸识别系统中的后门攻击及其防御措施'
 date: 2024.12.26
-host: "谢沅甫"
+host: "张技轩"
 digest: "本次组会分享了人脸识别系统（FRS）中的后门攻击及其防御措施"
 permalink: /:categories/:year/:month/:day/:title
 categories:
