--- a/_posts/seminar/2025-1-16-seminar-61.md
+++ b/_posts/seminar/2025-1-16-seminar-61.md
@@ -3,7 +3,7 @@ layout: post
 title: "学术报告"
 subtitle: 'Use-After-Cleanup (UAC)漏洞分享'
 date: 2024.1.16
-host: "谢沅甫"
+host: "江昊"
 digest: "本次组会通过一篇论文分享了Use-After-Cleanup (UAC)漏洞"
 permalink: /:categories/:year/:month/:day/:title
 categories:
