--- a/_posts/seminar/2024-12-26-seminar-59.md
+++ b/_posts/seminar/2024-12-26-seminar-59.md
@@ -12,13 +12,13 @@ categories:
 ## 人脸识别系统中的后门攻击及其防御措施
 
 ## 1. 后门攻击的定义
-后门攻击是指攻击者在模型中植入恶意代码或数据，使得模型在特定条件下产生预期的错误输出，从而影响系统的安全性和可靠性。
+后门攻击是指攻击者在模型中植入恶意代码或数据，使得模型在特定条件下产生预期的错误输出，从而影响系统的安全性和可靠性
 
 ## 2. 数据访问与数据中毒
-攻击者可以通过访问训练数据或在训练环境中进行操控来实施数据中毒攻击，这会导致模型在识别时出现偏差或错误。
+攻击者可以通过访问训练数据或在训练环境中进行操控来实施数据中毒攻击，这会导致模型在识别时出现偏差或错误
 
 ## 3. 模型架构与权重操控
-攻击者可能会通过操控模型的架构或权重来影响模型的决策过程，从而实现后门攻击。
+攻击者可能会通过操控模型的架构或权重来影响模型的决策过程，从而实现后门攻击
 
 ## 4. 防御措施
 针对后门攻击，提出了一些防御策略，包括：
@@ -27,7 +27,7 @@ categories:
 - 实施监控和审计机制，以便及时发现和响应潜在的攻击
 
 ## 5. 训练环境的安全性
-强调了在模型训练过程中保护训练环境的重要性，以防止外部干扰和攻击。
+强调了在模型训练过程中保护训练环境的重要性，以防止外部干扰和攻击
 
 
 [本次组会内容下载链接](https://github.com/Lizhizhiyi/PPT/blob/main/files/20241226.pdf)
