--- a/_posts/seminar/2025-1-9-seminar-60.md
+++ b/_posts/seminar/2025-1-9-seminar-60.md
@@ -12,7 +12,7 @@ categories:
 ## 小程序安全研究分享
 
 ## 1. 小程序的背景与特点
-小程序是一种新的移动计算模式，由流行的移动应用程序（如微信、百度等）托管，为主应用提供扩展功能。
+小程序是一种新的移动计算模式，由流行的移动应用程序（如微信、百度等）托管，为主应用提供扩展功能
 
 ## 2. 假冒小程序研究（MiniWukong）
 描述假冒小程序的生成与检测方法，包括拼音替换、同义替换等对抗样本生成方法
@@ -24,9 +24,9 @@ categories:
 攻击案例：通过篡改路由 URL 实现未经授权的操作和敏感数据泄露
 
 ## 4. 静态分析工具 （MiniCAT)
-自动分析框架 MINICAT，用于检测微信小程序中潜在的 MiniCPRF漏洞。包含两个模块：
-小程序爬虫（Mini-Program Crawler）用于收集海量小程序，
-MiniCPRF 检测器（MiniCPRF Detector） 用于检测小程序中的 MiniCPRF漏洞。
+自动分析框架 MINICAT，用于检测微信小程序中潜在的 MiniCPRF漏洞。包含两个模块
+小程序爬虫（Mini-Program Crawler）用于收集海量小程序
+MiniCPRF 检测器（MiniCPRF Detector） 用于检测小程序中的 MiniCPRF漏洞
 
 
 [本次组会内容下载链接](https://github.com/Lizhizhiyi/PPT/blob/main/files/20250109.pdf)
