--- a/_posts/seminar/2025-2-6-seminar-62.md
+++ b/_posts/seminar/2025-2-6-seminar-62.md
@@ -3,7 +3,7 @@ layout: post
 title: "学术报告"
 subtitle: '区块链网络异常检测溯源分享'
 date: 2024.2.6
-host: "江昊"
+host: "李锦凯"
 digest: "本次组会分享了区块链网络异常检测溯源"
 permalink: /:categories/:year/:month/:day/:title
 categories:
