--- a/_posts/seminar/2025-1-16-seminar-61.md
+++ b/_posts/seminar/2025-1-16-seminar-61.md
@@ -19,9 +19,9 @@ categories:
 内核未正确同步，导致syscall路径无法感知对象已被释放
 
 ## 3. UACatcher的工作机制
-分析设备相关代码，提取unreg-entry和interface函数。
-定位设备内存对象的释放点（deallocation site）与解引用点（dereference site）。
-通过上下文切换算法确认是否会触发UAC行为。
+分析设备相关代码，提取unreg-entry和interface函数
+定位设备内存对象的释放点（deallocation site）与解引用点（dereference site）
+通过上下文切换算法确认是否会触发UAC行为
 
 ## 4. 技术细节
 分层模型：从底层硬件到用户态的资源访问
